// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emit snapshots — bun fixture > full-featured spec > bun-full-Dockerfile 1`] = `
"# konfig-managed: @konfig.ts/docker
# spec: packages/app/docker.ts
# hash: sha256:a08444016490aba350c23a324a38d2ddfa92c6b172539e287667c2d2292d634f
FROM oven/bun:1.3.5-alpine AS base

FROM base AS deps
WORKDIR /app
COPY package.json bun.lock bunfig.toml ./
COPY packages/app/package.json ./packages/app/
COPY packages/other/package.json ./packages/other/
COPY packages/shared/package.json ./packages/shared/
COPY packages/util/package.json ./packages/util/
RUN bun install --ignore-scripts

FROM base AS builder
WORKDIR /app
COPY --from=deps /app/node_modules /app/node_modules
COPY --from=deps /app/packages/shared/node_modules /app/packages/shared/node_modules
COPY --from=deps /app/packages/util/node_modules /app/packages/util/node_modules
COPY --from=deps /app/packages/app/node_modules /app/packages/app/node_modules
COPY packages/shared ./packages/shared
COPY packages/util ./packages/util
COPY packages/app ./packages/app
WORKDIR /app/packages/app
RUN bun run build

FROM --platform=linux/amd64 base AS runner
WORKDIR /app/packages/app
RUN addgroup -S -g 1234 myapp && adduser -S -u 1234 -G myapp myapp
ENV LOG_LEVEL=info NODE_ENV=production
EXPOSE 4000
EXPOSE 9229
COPY --from=builder --chown=myapp:myapp /app/node_modules /app/node_modules
COPY --from=builder --chown=myapp:myapp /app/packages/app/dist /app/packages/app/dist
COPY --from=builder --chown=myapp:myapp /app/packages/shared /app/packages/shared
COPY --from=builder --chown=myapp:myapp /app/packages/util /app/packages/util
COPY --from=builder --chown=myapp:myapp /app/packages/shared/node_modules /app/packages/shared/node_modules
COPY --from=builder --chown=myapp:myapp /app/packages/util/node_modules /app/packages/util/node_modules
COPY --from=builder --chown=myapp:myapp /app/packages/app/node_modules /app/packages/app/node_modules
HEALTHCHECK --interval=30s CMD ["wget","--spider","-q","http://localhost:4000/healthz"]
USER myapp
CMD ["bun","run","dist/main.js"]
"
`;

exports[`emit snapshots — bun fixture > full-featured spec > bun-full-Dockerfile.dev 1`] = `
"# konfig-managed: @konfig.ts/docker
# spec: packages/app/docker.ts
# hash: sha256:f708429bef8fafbd5d1d0239ea08eb2d2c33d75bfa31ed9e9e73f170a287a6bb
FROM oven/bun:1.3.5-alpine AS base

FROM base AS dev
WORKDIR /app
COPY package.json bun.lock bunfig.toml ./
COPY packages/app/package.json ./packages/app/
COPY packages/other/package.json ./packages/other/
COPY packages/shared/package.json ./packages/shared/
COPY packages/util/package.json ./packages/util/
RUN bun install
COPY packages/shared ./packages/shared
COPY packages/util ./packages/util
COPY packages/app ./packages/app
WORKDIR /app/packages/app
ENV DEBUG=1 NODE_ENV=development
EXPOSE 4000
CMD ["bun","--watch","main.ts"]
"
`;

exports[`emit snapshots — bun fixture > minimal spec > bun-minimal-Dockerfile 1`] = `
"# konfig-managed: @konfig.ts/docker
# spec: packages/app/docker.ts
# hash: sha256:810684ac03d1843a1fdb8de142e2ab68f33801db07b68dfc0637f71545c462e9
FROM oven/bun:1.3.5-alpine AS base

FROM base AS deps
WORKDIR /app
COPY package.json bun.lock bunfig.toml ./
COPY packages/app/package.json ./packages/app/
COPY packages/other/package.json ./packages/other/
COPY packages/shared/package.json ./packages/shared/
COPY packages/util/package.json ./packages/util/
RUN bun install --ignore-scripts

FROM base AS builder
WORKDIR /app
COPY --from=deps /app/node_modules /app/node_modules
COPY --from=deps /app/packages/shared/node_modules /app/packages/shared/node_modules
COPY --from=deps /app/packages/util/node_modules /app/packages/util/node_modules
COPY --from=deps /app/packages/app/node_modules /app/packages/app/node_modules
COPY packages/shared ./packages/shared
COPY packages/util ./packages/util
COPY packages/app ./packages/app
WORKDIR /app/packages/app
RUN bun run build

FROM base AS runner
WORKDIR /app/packages/app
RUN addgroup -S -g 1001 app && adduser -S -u 1001 -G app app
ENV NODE_ENV=production
COPY --from=builder --chown=app:app /app/packages/app/dist /app/packages/app/dist
USER app
CMD ["bun","run","dist/main.js"]
"
`;

exports[`emit snapshots — npm fixture > minimal spec > npm-minimal-Dockerfile 1`] = `
"# konfig-managed: @konfig.ts/docker
# spec: packages/app/docker.ts
# hash: sha256:e092355160d9d7582df107a43a38a9390d6da3283fbaa034d1a0633d68fa7ef8
FROM node:22-alpine AS base

FROM base AS deps
WORKDIR /app
COPY package.json package-lock.json .npmrc ./
COPY packages/app/package.json ./packages/app/
COPY packages/other/package.json ./packages/other/
COPY packages/shared/package.json ./packages/shared/
COPY packages/util/package.json ./packages/util/
RUN npm ci --ignore-scripts

FROM base AS builder
WORKDIR /app
COPY --from=deps /app/node_modules /app/node_modules
COPY --from=deps /app/packages/shared/node_modules /app/packages/shared/node_modules
COPY --from=deps /app/packages/util/node_modules /app/packages/util/node_modules
COPY --from=deps /app/packages/app/node_modules /app/packages/app/node_modules
COPY packages/shared ./packages/shared
COPY packages/util ./packages/util
COPY packages/app ./packages/app
WORKDIR /app/packages/app
RUN npm run build

FROM base AS runner
WORKDIR /app/packages/app
RUN addgroup -S -g 1001 app && adduser -S -u 1001 -G app app
ENV NODE_ENV=production
COPY --from=builder --chown=app:app /app/packages/app/dist /app/packages/app/dist
USER app
CMD ["bun","run","dist/main.js"]
"
`;

exports[`emit snapshots — pnpm-hoisted fixture > minimal spec > pnpm-hoisted-minimal-Dockerfile 1`] = `
"# konfig-managed: @konfig.ts/docker
# spec: packages/app/docker.ts
# hash: sha256:1a3009c5e7c516cd1b7bf8a7257899c9284248a0b13bcc8c03295664d84b1cb1
FROM node:22-alpine AS base

FROM base AS deps
WORKDIR /app
COPY package.json pnpm-lock.yaml pnpm-workspace.yaml .npmrc ./
COPY packages/app/package.json ./packages/app/
COPY packages/other/package.json ./packages/other/
COPY packages/shared/package.json ./packages/shared/
COPY packages/util/package.json ./packages/util/
RUN corepack enable pnpm && corepack prepare pnpm@9.7.0 --activate
RUN pnpm install --frozen-lockfile --ignore-scripts

FROM base AS builder
WORKDIR /app
COPY --from=deps /app/node_modules /app/node_modules
COPY packages/shared ./packages/shared
COPY packages/util ./packages/util
COPY packages/app ./packages/app
WORKDIR /app/packages/app
RUN pnpm run build

FROM base AS runner
WORKDIR /app/packages/app
RUN addgroup -S -g 1001 app && adduser -S -u 1001 -G app app
ENV NODE_ENV=production
COPY --from=builder --chown=app:app /app/packages/app/dist /app/packages/app/dist
USER app
CMD ["bun","run","dist/main.js"]
"
`;

exports[`emit snapshots — pnpm-isolated fixture > minimal spec > pnpm-isolated-minimal-Dockerfile 1`] = `
"# konfig-managed: @konfig.ts/docker
# spec: packages/app/docker.ts
# hash: sha256:6991af93583cbdbd9b7813c90796369b0dd441bb90aba4c131a77b89ba701b65
FROM node:22-alpine AS base

FROM base AS deps
WORKDIR /app
COPY package.json pnpm-lock.yaml pnpm-workspace.yaml .npmrc ./
COPY packages/app/package.json ./packages/app/
COPY packages/other/package.json ./packages/other/
COPY packages/shared/package.json ./packages/shared/
COPY packages/util/package.json ./packages/util/
RUN corepack enable pnpm && corepack prepare pnpm@9.7.0 --activate
RUN pnpm install --frozen-lockfile --ignore-scripts

FROM base AS builder
WORKDIR /app
COPY --from=deps /app/node_modules /app/node_modules
COPY --from=deps /app/packages/shared/node_modules /app/packages/shared/node_modules
COPY --from=deps /app/packages/util/node_modules /app/packages/util/node_modules
COPY --from=deps /app/packages/app/node_modules /app/packages/app/node_modules
COPY packages/shared ./packages/shared
COPY packages/util ./packages/util
COPY packages/app ./packages/app
WORKDIR /app/packages/app
RUN pnpm run build

FROM base AS runner
WORKDIR /app/packages/app
RUN addgroup -S -g 1001 app && adduser -S -u 1001 -G app app
ENV NODE_ENV=production
COPY --from=builder --chown=app:app /app/packages/app/dist /app/packages/app/dist
USER app
CMD ["bun","run","dist/main.js"]
"
`;
